<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/pad_screen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView style="@style/LabDim" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/lbl_name" />
        <TextView android:id="@+id/dName" style="@style/LabBody" android:layout_width="match_parent" android:layout_height="wrap_content" android:textStyle="bold" android:paddingBottom="@dimen/pad_small" android:text="-" />

        <TextView style="@style/LabDim" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/lbl_type" />
        <TextView android:id="@+id/dType" style="@style/LabBody" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingBottom="@dimen/pad_small" android:text="-" />

        <TextView style="@style/LabDim" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/lbl_value" />
        <TextView android:id="@+id/dValue" style="@style/LabMono" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingBottom="@dimen/pad_small" android:text="-" />

        <TextView style="@style/LabDim" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/lbl_address" />
        <TextView android:id="@+id/dAddress" style="@style/LabMono" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingBottom="@dimen/pad_small" android:text="-" />

        <TextView style="@style/LabDim" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/lbl_desc" />
        <TextView android:id="@+id/dDesc" style="@style/LabBody" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingBottom="@dimen/pad_small" android:text="-" />

        <TextView style="@style/LabDim" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/lbl_risk" />
        <TextView android:id="@+id/dRisk" style="@style/LabBody" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingBottom="@dimen/pad_small" android:text="-" />

        <TextView style="@style/LabDim" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/lbl_defense" />
        <TextView android:id="@+id/dDefense" style="@style/LabBody" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="-" />

    </LinearLayout>
</ScrollView>
