<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lab_bg"
    android:padding="@dimen/pad_screen">

    <TextView
        style="@style/LabTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/state_title" />

    <TextView
        style="@style/LabDim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/pad_small"
        android:paddingBottom="@dimen/pad_small"
        android:text="@string/state_sub" />

    <Button
        android:id="@+id/refreshBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_refresh" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="@dimen/pad_small"
        android:clipToPadding="false" />

</LinearLayout>
